<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_password_vertical_padding"
    android:paddingBottom="@dimen/dialog_password_vertical_padding"
    android:paddingLeft="@dimen/dialog_password_horizontal_padding"
    android:paddingStart="@dimen/dialog_password_horizontal_padding"
    android:paddingRight="@dimen/dialog_password_horizontal_padding"
    android:paddingEnd="@dimen/dialog_password_horizontal_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifilist_dialog_title_ssid"
        android:textColor="#80000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/ssid_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_password_value_margin_top"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_password_title_margin_top"
        android:text="@string/wifilist_dialog_title_security"
        android:textColor="#80000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/auth_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_password_value_margin_top"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_password_title_margin_top"
        android:text="@string/wifilist_dialog_title_password"
        android:textColor="#80000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_password_value_margin_top"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />
</LinearLayout>